adding a thank you message

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,6 +95,14 @@
 								</form>
 							</article>
 
+
+							<!-- Contact -->
+						<article id="thankyou">
+							<h2 class="major">Thank you</h2>
+							<p>I will try to get back to you soon.</p>
+						</article>
+
+
 						<!-- Elements -->
 							<article id="elements">
 								<h2 class="major">Elements</h2>
