Minor update to verbiage.

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 								<h1>Jeff Anberg</h1>
 								<p>I am a writer and photographer living in San Francisco versatile in creative work,
 									long-form essays concerning American politics and culture,
-									and technical writing specializing in Python and C# programming. </p>
+									and technical writing or programming specializing in Python and C#. </p>
 							</div>
 						</div>
 						<nav>
