--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,9 @@
                             <label for="message">Message</label>
                             <textarea name="message" id="message" rows="4"></textarea>
                         </div>
-                        <div class="g-recaptcha" data-sitekey="6LfTefcUAAAAAMsBLYsUbQ-E8FYoFSULI9G5Z0FU" data-theme="dark"></div>
+                        <div class="field">
+                            <div class="g-recaptcha" data-sitekey="6LfTefcUAAAAAMsBLYsUbQ-E8FYoFSULI9G5Z0FU" data-theme="dark"></div>
+                        </div>
                     </div>
                     <ul class="actions">
                         <li><input type="submit" value="Send Message" class="primary" /></li>
