--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
             <div class="content">
                 <div class="inner">
                     <h1>Jeff Anberg</h1>
-                    <p>I am a writer and photographer living in San Francisco versatile in creative work,
-                        long-form essays concerning American politics and culture,
-                        and technical writing or programming specializing in Python and C#. </p>
+                    <p>I am an editor and writer living in San Francisco
+			well-versed in public and investor relations, media distribution,
+			and client management of high-profile customers.</p>
                 </div>
             </div>
             <nav>
@@ -62,7 +62,11 @@
             <article id="work">
                 <h2 class="major">Work</h2>
                 <span class="image main"><img src="./static/images/pic02.jpg" alt="" /></span>
-                <p>I am currently working as a newsroom editor and pursuing projects coded in Python and C# in my spare time.</p>
+		<p>With a robust academic background in literature and philosophy,
+		 and a life-long passion for technology, 
+		 I have a versatile skillset that includes technical knowledge of important tools 
+		 and concepts in the technology or finance industries as well as the
+		 ability to communicate those ideas to an audience of any demographic.
                 <p>My GitHub page can be found at <a href="https://github.com/jeffanberg">this link.</a></p>
                 <p>Access my photography portfolio by <a href="http://jeffanberg.myportfolio.com">clicking here</a>.</p>
             </article>
@@ -71,7 +75,11 @@
             <article id="about">
                 <h2 class="major">About</h2>
                 <span class="image main"><img src="./static/images/pic03.jpg" alt="" /></span>
-                <p>I graduated with a degree in English Literature and Philosophy from San Francisco State University.</p>
+		<p>Along with my work experience in PR/IR distribution, my hobbies include
+		programming with Python and C#, open-source development especially with Linux
+		distributions, and creative pursuits utilizing much of Adobe Creative Cloud suite of
+		programs. I hope to apply these wide-ranging interests to an innovative and growing
+		industry that will contribute to the betterment of society. </p>
             </article>
 
             <!-- Contact -->
